@@ -14,6 +14,8 @@
 
 6.5.3 to 6.6 (??? ??, 202?)
 
+  * Added PlusROMs support for saving high scores
+
   * Added preliminary support for 'MVC' bankswitching scheme by
     Rob Bairos.
 
